<resources>
    <string name="app_name">MisContactos</string>
    <string name="oncreate">OnCreate</string>
    <string name="onstart">OnStart</string>
    <string name="onresume">OnResume</string>
    <string name="onrestart">OnRestart</string>
    <string name="onpause">OnPause</string>
    <string name="onstop">OnStop</string>
    <string name="ondestroy">OnDestroy</string>

    <string name="oncreate_contacto">OnCreate Detalle"></string>
    <string name="onstart_contacto">OnStart Detalle</string>
    <string name="onresume_contacto">OnResume Detalle</string>
    <string name="onrestart_contacto">OnRestart Detalle</string>
    <string name="onpause_contacto">OnPause Detalle</string>
    <string name="onstop_contacto">OnStop Detalle</string>
    <string name="ondestroy_contacto">OnDestroy Detalle</string>

    <string name="nombre">Anahi Salgado</string>
    <string name="telefono">5555555555</string>
    <string name="email">anahi5@example-pet-store.com</string>


    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="plike">0</string>

    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_bluetooth">Bluetooth</string>


    <string name="texto_settings">Settings del Aplicativo</string>
    <string name="texto_about">Acerca de 2025</string>


    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="menu_view">View Image</string>
    <string name="menu_view_detail">View Image Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_nombre">Nombre</string>
    <string name="main_correo">Correo</string>
    <string name="main_mensaje">Mensaje</string>

    <string name="main_enviar">ENVIAR</string>
    <string name="main_guardarfile">GUARDAR FILE</string>
    <string name="main_guardareferencia">GUARDAR REFERENCIA</string>
    <string name="main_mostrareferencia">MOSTRAR REFERENCIA</string>

    <string name="toolbar_title">Formulario_Contacto</string>
    <string name="referencia_guardada">REFERENCIA GUARDADA</string>


    <string name="titulo_llamadas">Llamadas</string>
    <string name="mostrar_llamadas">MOSTRAR LLAMADAS</string>
    <string name="entrada_llamada">Llamada entrante</string>
    <string name="salida_llamada">Llamada salida</string>
    <string name="perdida_llamada">Llamada perdida</string>
    <string name="desconocida_llamada">Llamada desconocida</string>

</resources>