<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTituloLlamada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_llamadas"
        android:textSize="25sp"
        android:layout_gravity="center_vertical"
        >

    </TextView>

    <Button
        android:id="@+id/btnMostrarLLamadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_llamadas">

    </Button>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvLlamadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                >

            </TextView>
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>