<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <include android:id="@+id/toolbar"
        layout="@layout/actionbar">
    </include>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/nombre_contacto"


       />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:onClick="llamar">

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/icons8_call_50" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/telefono"
            android:textSize="@dimen/telefono_contacto"
            android:layout_marginStart="@dimen/left"
            >

        </TextView>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/top"
    android:onClick="enviarEmail"

    >

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:src="@drawable/icons8_mail_50" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/email"
       android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/left"
        >
    </TextView>

</LinearLayout>




</LinearLayout>